--- a/PetaFF/PetaFF/Views/PetAd/Create.cshtml
+++ b/PetaFF/PetaFF/Views/PetAd/Create.cshtml
@@ -15,9 +15,9 @@
         <span asp-validation-for="Type" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Location"></label>
-        <input asp-for="Location" class="form-control" />
-        <span asp-validation-for="Location" class="text-danger"></span>
+        <label asp-for="Street"></label>
+        <input asp-for="Street" class="form-control" />
+        <span asp-validation-for="Street" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="ContactPhone"></label>
