--- a/PetaFF/PetaFF/Views/PetAd/Index.cshtml
+++ b/PetaFF/PetaFF/Views/PetAd/Index.cshtml
@@ -19,7 +19,7 @@
         <tr>
             <td>@ad.Name</td>
             <td>@ad.Type</td>
-            <td>@ad.Location</td>
+            <td>@ad.Street</td>
             <td>@ad.ContactPhone</td>
         </tr>
     }
