--- a/PetaFF/PetaFF/Views/Account/Login.cshtml
+++ b/PetaFF/PetaFF/Views/Account/Login.cshtml
@@ -1,5 +1,3 @@
-@model PetaFF.Models.LoginViewModel
-
 @{
     ViewData["Title"] = "Вход";
 }
@@ -7,19 +5,18 @@
 <div class="row justify-content-center">
     <div class="col-md-4">
         <h2>@ViewData["Title"]</h2>
-        <form asp-action="Login" method="post" autocomplete="off">
+        <form asp-action="Login" method="post">
+            @Html.AntiForgeryToken()
             <div asp-validation-summary="All" class="text-danger"></div>
             
             <div class="form-group">
-                <label asp-for="Username" class="control-label"></label>
-                <input asp-for="Username" class="form-control" autocomplete="username" />
-                <span asp-validation-for="Username" class="text-danger"></span>
+                <label for="username" class="control-label">Имя пользователя</label>
+                <input name="username" class="form-control" required />
             </div>
 
             <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" type="password" autocomplete="current-password" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+                <label for="password" class="control-label">Пароль</label>
+                <input name="password" class="form-control" type="password" required />
             </div>
 
             <div class="form-group mt-3">
