--- a/PetaFF/PetaFF/Views/PetAd/Create.cshtml
+++ b/PetaFF/PetaFF/Views/PetAd/Create.cshtml
@@ -22,12 +22,6 @@
         </div>
 
         <div class="form-group mb-3">
-            <label asp-for="Street" class="control-label"></label>
-            <input asp-for="Street" class="form-control" required />
-            <span asp-validation-for="Street" class="text-danger"></span>
-        </div>
-
-        <div class="form-group mb-3">
             <label asp-for="ContactPhone" class="control-label"></label>
             <input asp-for="ContactPhone" class="form-control" required />
             <span asp-validation-for="ContactPhone" class="text-danger"></span>
@@ -46,8 +40,14 @@
         </div>
 
         <div class="form-group mb-3">
-            <label asp-for="LastSeenAddress" class="control-label"></label>
-            <input asp-for="LastSeenAddress" class="form-control" required />
+            <label asp-for="Address" class="control-label">Адрес пользователя</label>
+            <input asp-for="Address" class="form-control" required />
+            <span asp-validation-for="Address" class="text-danger"></span>
+        </div>
+
+        <div class="form-group mb-3">
+            <label asp-for="LastSeenAddress" class="control-label">Место, где видели в последний раз</label>
+            <input asp-for="LastSeenAddress" class="form-control" />
             <span asp-validation-for="LastSeenAddress" class="text-danger"></span>
         </div>
 
