--- a/PetaFF/PetaFF/Views/Map/Index.cshtml
+++ b/PetaFF/PetaFF/Views/Map/Index.cshtml
@@ -1,11 +1,11 @@
 @model IEnumerable<dynamic>
 
 @{
-    ViewData["Title"] = "Карта объявлений";
+    ViewData["Title"] = "Навигационная карта города Минска";
 }
 
 <div class="container mt-4">
-    <h2>Карта объявлений</h2>
+    <h2>Навигационная карта города Минска</h2>
     <div id="map" style="width: 100%; height: 600px;"></div>
 </div>
 
