--- a/PetaFF/PetaFF/Views/PetAd/OtherAds.cshtml
+++ b/PetaFF/PetaFF/Views/PetAd/OtherAds.cshtml
@@ -1,14 +1,35 @@
 @model IEnumerable<PetaFF.Models.PetAd>
 @using PetaFF.Extensions
+@using System.Globalization
 
 @{
     ViewData["Title"] = "Объявления других";
+
+    // Список фейковых объявлений
+    var fakeAds = new List<PetaFF.Models.PetAd>
+    {
+        new PetaFF.Models.PetAd { Name = "Барсик", Type = "Кот", Description = "Серый пушистый кот, пропал возле ул. Немига. Без ошейника.", DateLost = DateTime.ParseExact("10.05.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375291234567", Status = PetStatus.InSearch, Address = "ул. Немига", District = "Центральный", User = new PetaFF.Models.User { Username = "user1" }, PhotoPath = "/img/fake1.jpg" },
+        new PetaFF.Models.PetAd { Name = "Белла", Type = "Собака", Description = "Лабрадор, светлая, дружелюбная. Убежала возле Логойского тракта.", DateLost = DateTime.ParseExact("29.04.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375296543210", Status = PetStatus.InSearch, Address = "Логойский тракт", District = "Советский", User = new PetaFF.Models.User { Username = "user2" }, PhotoPath = "/img/fake2.jpg" },
+        new PetaFF.Models.PetAd { Name = "Мурка", Type = "Кошка", Description = "Черная с белыми лапками, исчезла в районе пл. Победы.", DateLost = DateTime.ParseExact("01.05.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375447891234", Status = PetStatus.InSearch, Address = "пл. Победы", District = "Ленинский", User = new PetaFF.Models.User { Username = "user3" }, PhotoPath = "/img/fake3.jpg" },
+        new PetaFF.Models.PetAd { Name = "Рекс", Type = "Собака", Description = "Овчарка, откликается на кличку. Потерян на Кальварийской.", DateLost = DateTime.ParseExact("15.04.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375333456789", Status = PetStatus.InSearch, Address = "ул. Кальварийская", District = "Фрунзенский", User = new PetaFF.Models.User { Username = "user4" }, PhotoPath = "/img/fake4.jpg" },
+        new PetaFF.Models.PetAd { Name = "Снежок", Type = "Кролик", Description = "Белый декоративный кролик, пропал с двора на ул. Ангарской.", DateLost = DateTime.ParseExact("05.05.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375297654321", Status = PetStatus.InSearch, Address = "ул. Ангарская", District = "Заводской", User = new PetaFF.Models.User { Username = "user5" }, PhotoPath = "/img/fake5.jpg" },
+        new PetaFF.Models.PetAd { Name = "Том", Type = "Кот", Description = "Рыжий, крупный, ушёл с ул. Восточной.", DateLost = DateTime.ParseExact("22.03.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375291111222", Status = PetStatus.InSearch, Address = "ул. Восточная", District = "Партизанский", User = new PetaFF.Models.User { Username = "user6" }, PhotoPath = "/img/fake6.jpg" },
+        new PetaFF.Models.PetAd { Name = "Лаки", Type = "Собака", Description = "Йоркширский терьер, исчез возле Орловской.", DateLost = DateTime.ParseExact("03.05.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375295551234", Status = PetStatus.InSearch, Address = "ул. Орловская", District = "Октябрьский", User = new PetaFF.Models.User { Username = "user7" }, PhotoPath = "/img/fake7.jpg" },
+        new PetaFF.Models.PetAd { Name = "Дымка", Type = "Кошка", Description = "Серая, пушистая, боится людей. Потеряна в районе Бехтерева.", DateLost = DateTime.ParseExact("18.04.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375445671234", Status = PetStatus.InSearch, Address = "ул. Бехтерева", District = "Московский", User = new PetaFF.Models.User { Username = "user8" }, PhotoPath = "/img/fake8.jpg" },
+        new PetaFF.Models.PetAd { Name = "Чарли", Type = "Попугай", Description = "Зелёный волнистый попугай, умеет говорить. Вылетел в районе Брилевской.", DateLost = DateTime.ParseExact("09.05.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375298765432", Status = PetStatus.InSearch, Address = "ул. Брилевская", District = "Ленинский", User = new PetaFF.Models.User { Username = "user9" }, PhotoPath = "/img/fake9.jpg" },
+        new PetaFF.Models.PetAd { Name = "Грей", Type = "Собака", Description = "Хаски, голубые глаза. Пропал на Городском Вале.", DateLost = DateTime.ParseExact("07.05.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375292345678", Status = PetStatus.InSearch, Address = "Городской Вал", District = "Центральный", User = new PetaFF.Models.User { Username = "user10" }, PhotoPath = "/img/fake10.jpg" },
+        new PetaFF.Models.PetAd { Name = "Луна", Type = "Кошка", Description = "Трехцветная, домашняя. Убежала из квартиры на Сурганова.", DateLost = DateTime.ParseExact("30.04.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375291234888", Status = PetStatus.InSearch, Address = "ул. Сурганова", District = "Советский", User = new PetaFF.Models.User { Username = "user11" }, PhotoPath = "/img/fake11.jpg" },
+        new PetaFF.Models.PetAd { Name = "Шарик", Type = "Собака", Description = "Местный песик, сбежал из двора в Каменной Горке.", DateLost = DateTime.ParseExact("01.05.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375299998877", Status = PetStatus.InSearch, Address = "Каменная Горка", District = "Фрунзенский", User = new PetaFF.Models.User { Username = "user12" }, PhotoPath = "/img/fake12.jpg" },
+        new PetaFF.Models.PetAd { Name = "Кнопа", Type = "Кошка", Description = "Маленькая чёрная кошечка, исчезла на Слепянке.", DateLost = DateTime.ParseExact("27.04.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375293332211", Status = PetStatus.InSearch, Address = "Слепянка", District = "Партизанский", User = new PetaFF.Models.User { Username = "user13" }, PhotoPath = "/img/fake13.jpg" },
+        new PetaFF.Models.PetAd { Name = "Ричи", Type = "Собака", Description = "Французский бульдог, последний раз видели возле Маяковского.", DateLost = DateTime.ParseExact("04.05.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375291239999", Status = PetStatus.InSearch, Address = "ул. Маяковского", District = "Заводской", User = new PetaFF.Models.User { Username = "user14" }, PhotoPath = "/img/fake14.jpg" },
+        new PetaFF.Models.PetAd { Name = "Жужа", Type = "Кошка", Description = "Бежево-серая, потеряна возле Зеленого Луга.", DateLost = DateTime.ParseExact("08.05.2025", "dd.MM.yyyy", CultureInfo.InvariantCulture), ContactPhone = "+375292223344", Status = PetStatus.InSearch, Address = "Зеленый Луг", District = "Советский", User = new PetaFF.Models.User { Username = "user15" }, PhotoPath = "/img/fake15.jpg" },
+    };
 }
 
 <h1>Объявления других пользователей</h1>
 
 <div class="row">
-    @foreach (var item in Model)
+    @foreach (var item in fakeAds.Concat(Model ?? Enumerable.Empty<PetaFF.Models.PetAd>()))
     {
         <div class="col-md-4 mb-4">
             <div class="card h-100">
@@ -34,20 +55,24 @@
                     <p class="card-text">@item.Description</p>
                     <p class="card-text">
                         <small class="text-muted">
-                            Автор: @item.User.Username<br />
-                            Контакты: @item.ContactPhone
+                            Автор: @item.User?.Username<br />
+                            Контакты: @item.ContactPhone<br />
+                            Дата: @item.DateLost?.ToString("dd.MM.yyyy")
                         </small>
                     </p>
-                </div>
-                <div class="card-footer">
-                    <div class="btn-group w-100">
-                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">Подробнее</a>
-                    </div>
+                    <a class="btn btn-primary disabled" style="pointer-events:none;opacity:0.7;">Подробнее</a>
                 </div>
             </div>
         </div>
     }
 </div>
+
+@if (!Model.Any())
+{
+    <div class="alert alert-info">
+        Пока нет объявлений других пользователей
+    </div>
+}
 
 @section Scripts {
     <script>
