--- a/PetaFF/PetaFF/Views/Home/Index.cshtml
+++ b/PetaFF/PetaFF/Views/Home/Index.cshtml
@@ -4,6 +4,15 @@
     ViewData["Title"] = "Главная";
 }
 
+<div class="theme-switch-wrapper">
+    <i class="bi bi-sun-fill theme-icon"></i>
+    <label class="theme-switch">
+        <input type="checkbox" id="theme-toggle">
+        <span class="slider"></span>
+    </label>
+    <i class="bi bi-moon-fill theme-icon"></i>
+</div>
+
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-12">
