--- a/PetaFF/PetaFF/Views/Map/Index.cshtml
+++ b/PetaFF/PetaFF/Views/Map/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container mt-4">
     <h2>Навигационная карта города Минска</h2>
-    <div id="map" style="width: 100%; height: 600px;"></div>
+    <div id="map" style="width: 100%; height: 600px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);"></div>
 </div>
 
 @section Scripts {
@@ -15,29 +15,33 @@
         ymaps.ready(function () {
             var myMap = new ymaps.Map('map', {
                 center: [53.9022, 27.5618], // Минск
-                zoom: 11
+                zoom: 11,
+                controls: ['zoomControl', 'fullscreenControl']
             });
 
             var markers = @Html.Raw(Json.Serialize(Model));
 
             markers.forEach(function(marker) {
-                var coordinates = marker.location.split(',').map(Number);
-                var myPlacemark = new ymaps.Placemark(coordinates, {
-                    balloonContent: `
-                        <div class="card" style="width: 200px;">
-                            ${marker.photoPath ? `<img src="${marker.photoPath}" class="card-img-top" alt="${marker.name}">` : ''}
-                            <div class="card-body">
-                                <h5 class="card-title">${marker.name}</h5>
-                                <p class="card-text">${marker.type}</p>
-                                <a href="/PetAd/Details/${marker.id}" class="btn btn-primary">Подробнее</a>
+                if (marker.location) {
+                    var coordinates = marker.location.split(',').map(Number);
+                    var myPlacemark = new ymaps.Placemark(coordinates, {
+                        balloonContent: `
+                            <div class="card" style="width: 200px;">
+                                ${marker.photoPath ? `<img src="${marker.photoPath}" class="card-img-top" alt="${marker.name}" style="height: 150px; object-fit: cover;">` : ''}
+                                <div class="card-body">
+                                    <h5 class="card-title">${marker.name}</h5>
+                                    <p class="card-text">${marker.type}</p>
+                                    <a href="/PetAd/Details/${marker.id}" class="btn btn-primary">Подробнее</a>
+                                </div>
                             </div>
-                        </div>
-                    `
-                }, {
-                    preset: 'islands#bluePetIcon'
-                });
+                        `
+                    }, {
+                        preset: 'islands#bluePetIcon',
+                        iconColor: '#0d6efd'
+                    });
 
-                myMap.geoObjects.add(myPlacemark);
+                    myMap.geoObjects.add(myPlacemark);
+                }
             });
         });
     </script>
